--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "huggingface-hub (>=1.1.5,<2.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
-    "scipy (>=1.16.3,<2.0.0)"
+    "scipy (>=1.16.3,<2.0.0)",
+    "tabulate (>=0.9.0,<0.10.0)"
 ]
 
 [tool.poetry]
