--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ src/omniccg/final_results/
 src/omniccg/clone_detector_result/
 src/omniccg.egg-info/
 
+new/clone_genealogy/
+
 clone_detector_result/*
 __pycache__/*
 repo/*
